--- a/ArtGallery-Android/app/src/main/res/layout/activity_main.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_main.xml
@@ -4,116 +4,97 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#474141"
-    android:backgroundTint="#474141"
+    android:background="#DDD8CC"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/LogInBackgroundImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/pexels_ivan_bertolazzi_2681405" />
+        app:layout_constraintVertical_bias="1.0">
 
-    <TextView
-        android:id="@+id/error"
-        android:layout_width="186dp"
-        android:layout_height="134dp"
-        android:text=""
-        android:textColor="#FF0000"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/LogInBackgroundImage"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="25dp"
+            android:gravity="center"
+            android:text="@string/textMain"
+            android:textColor="@color/black"
+            android:textSize="36sp" />
 
-    <Button
-        android:id="@+id/loginButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="login"
-        android:text="@string/login_button"
-        app:layout_constraintBottom_toTopOf="@id/username"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Title"
-        app:layout_constraintVertical_bias="0.339" />
+        <Button
+            android:id="@+id/loginButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/Title"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="80dp"
+            android:backgroundTint="#AF9B5F"
+            android:gravity="center"
+            android:onClick="login"
+            android:text="@string/login_button"
+            android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/signupButton"
-        android:layout_width="123dp"
-        android:layout_height="88dp"
-        android:onClick="signup"
-        android:text="@string/signup_button"
-        app:iconTint="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.774" />
+        <EditText
+            android:id="@+id/username"
+            android:layout_width="190dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/loginButton"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="25dp"
+            android:background="@color/white"
+            android:gravity="center"
+            android:inputType="none"
+            android:text="@string/username_hint"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
-    <EditText
-        android:id="@+id/username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="47dp"
-        android:background="@color/white"
-        android:hint="@string/username_hint"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textColorHighlight="@color/black"
-        android:textColorHint="@android:color/darker_gray"
-        android:textColorLink="@android:color/holo_blue_light"
-        app:layout_constraintBottom_toTopOf="@+id/signupButton"
-        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="190dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/username"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="10dp"
+            android:background="@color/white"
+            android:gravity="center"
+            android:inputType="textPassword"
+            android:text="@string/password_hint"
+            android:textAlignment="center" />
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:hint="@string/password_hint"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textColorHighlight="@color/black"
-        android:textColorHint="@android:color/darker_gray"
-        android:textColorLink="@android:color/holo_blue_light"
-        app:layout_constraintBottom_toTopOf="@+id/signupButton"
-        app:layout_constraintTop_toBottomOf="@+id/loginButton"
-        tools:layout_editor_absoluteX="-16dp" />
+        <TextView
+            android:id="@+id/error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/password"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="10dp"
+            android:text="Error"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:textColor="?attr/colorError"
+            android:visibility="visible" />
 
-    <TextView
-        android:id="@+id/Title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/purple_500"
-        android:text="@string/title"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@id/loginButton"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <Button
-        android:id="@+id/testButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/test_button"
-        android:onClick="home"
-        app:layout_constraintBottom_toTopOf="@+id/signupButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.43" />
+        <Button
+            android:id="@+id/signupButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/password"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="50dp"
+            android:backgroundTint="@color/black"
+            android:gravity="center"
+            android:onClick="signup"
+            android:text="@string/signup_button"
+            app:iconTint="@color/black" />
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
