--- a/ArtGallery-Android/app/src/main/res/layout/activity_artwork.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_artwork.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:orientation="vertical"
@@ -13,10 +13,11 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#AF9B5F"
+        android:onClick="browse"
         android:text="Return to Browse Artworks"
         android:textAlignment="viewStart"
-        android:textSize="12sp"
-        android:onClick="browse"/>
+        android:textSize="12sp" />
 
     <ScrollView
         android:layout_width="match_parent"
