--- a/ArtGallery-Android/app/src/main/res/layout/activity_browse.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_browse.xml
@@ -1,65 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#DDD8CC"
     tools:context=".BrowseActivity">
 
-    <RelativeLayout
-        android:id="@+id/relativelayout"
-        android:layout_width="420dp"
-        android:layout_height="324dp"
-        app:layout_constraintBottom_toTopOf="@id/listview_artwork"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
-        <ImageView
-            android:id="@+id/myImageView"
+        <RelativeLayout
+            android:id="@+id/relativelayout"
             android:layout_width="wrap_content"
-            android:layout_height="188dp"
-            android:layout_alignBottom="@+id/myImageViewText"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="45dp"
-            android:layout_marginEnd="3dp"
-            android:layout_marginBottom="82dp"
-            app:srcCompat="@drawable/artworks_image" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/myImageViewText"
-            android:layout_width="wrap_content"
-            android:layout_height="83dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="-2dp"
-            android:layout_marginLeft="1dp"
-            android:layout_marginTop="232dp"
-            android:layout_marginEnd="9dp"
-            android:layout_marginRight="1dp"
-            android:layout_marginBottom="0dp"
-            android:gravity="center"
-            android:text="@string/browse_artworks"
-            android:textColor="#000000"
-            android:textSize="24sp" />
+            <Button
+                android:id="@+id/returnButton2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#AF9B5F"
+                android:onClick="returnToHome"
+                android:text="@string/returnButton2" />
 
-    </RelativeLayout>
+            <ImageView
+                android:id="@+id/myImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="177dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginEnd="-6dp"
+                app:srcCompat="@drawable/artworks_image" />
+
+            <TextView
+                android:id="@+id/myImageViewText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/myImageView"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="1dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginEnd="-4dp"
+                android:layout_marginRight="1dp"
+                android:fontFamily="sans-serif"
+                android:gravity="center"
+                android:text="@string/browse_artworks"
+                android:textColor="#000000"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+    </LinearLayout>
 
     <ListView
         android:id="@+id/listview_artwork"
-        android:layout_width="413dp"
-        android:layout_height="422dp"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="450dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relativelayout">
+        app:layout_constraintTop_toTopOf="@+id/linearLayout">
 
     </ListView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
