--- a/ArtGallery-Android/app/src/main/res/layout/activity_home.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_home.xml
@@ -47,11 +47,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="35dp"
+            android:fontFamily="sans-serif"
             android:gravity="center"
             android:text="@string/textHome"
             android:textAllCaps="true"
             android:textColor="@color/black"
-            android:textSize="25sp"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <Button
