--- a/ArtGallery-Android/app/src/main/res/layout/activity_edit_artwork.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_edit_artwork.xml
@@ -35,7 +35,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/list_item_icon"
+                android:id="@+id/artwork_picture"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
