--- a/ArtGallery-Android/app/src/main/res/layout/activity_signup.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_signup.xml
@@ -19,119 +19,104 @@
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/signup_image" />
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="157dp"
-        android:layout_height="94dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.416"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.219">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
 
-        <RadioButton
-            android:id="@+id/artistButton"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/signupText"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:text="Artist"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.62"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.272" />
+            android:text="@string/signupText"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
-        <RadioButton
-            android:id="@+id/customerButton"
-            android:layout_width="match_parent"
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="157dp"
+            android:layout_height="94dp"
+            android:gravity="center">
+
+            <RadioButton
+                android:id="@+id/artistButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:gravity="center"
+                android:text="Artist"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.62"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.272" />
+
+            <RadioButton
+                android:id="@+id/customerButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:gravity="center"
+                android:text="Customer"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.336"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.272" />
+        </RadioGroup>
+
+        <EditText
+            android:id="@+id/signupUsername"
+            android:layout_width="214dp"
+            android:layout_height="28dp"
+            android:background="@color/white"
+            android:gravity="center"
+            android:hint="username" />
+
+        <EditText
+            android:id="@+id/signupEmail"
+            android:layout_width="214dp"
+            android:layout_height="28dp"
+            android:background="@color/white"
+            android:gravity="center"
+            android:hint="email" />
+
+        <EditText
+            android:id="@+id/signupPassword"
+            android:layout_width="214dp"
+            android:layout_height="28dp"
+            android:background="@color/white"
+            android:gravity="center"
+            android:hint="password" />
+
+        <EditText
+            android:id="@+id/signupConfirmPassword"
+            android:layout_width="214dp"
+            android:layout_height="28dp"
+            android:background="@color/white"
+            android:gravity="center"
+            android:hint="confirm password" />
+
+        <Button
+            android:id="@+id/signupButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:text="Customer"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.336"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.272" />
-    </RadioGroup>
+            android:onClick="signupUser"
+            android:gravity="center"
+            android:text="SignUp" />
 
-    <EditText
-        android:id="@+id/signupEmail"
-        android:layout_width="214dp"
-        android:layout_height="28dp"
-        android:background="@color/white"
-        android:hint="email"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.431"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.400" />
+        <TextView
+            android:id="@+id/signupError"
+            android:layout_width="255dp"
+            android:layout_height="32dp"
+            android:gravity="center"/>
 
-    <EditText
-        android:id="@+id/signupUsername"
-        android:layout_width="214dp"
-        android:layout_height="28dp"
-        android:background="@color/white"
-        android:hint="username"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.431"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.450" />
-
-    <EditText
-        android:id="@+id/signupPassword"
-        android:layout_width="214dp"
-        android:layout_height="28dp"
-        android:background="@color/white"
-        android:hint="password"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.431"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.500" />
-
-    <EditText
-        android:id="@+id/signupConfirmPassword"
-        android:layout_width="214dp"
-        android:layout_height="28dp"
-        android:background="@color/white"
-        android:hint="confirm password"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.431"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.550" />
-
-    <Button
-        android:id="@+id/signupButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="signupUser"
-        android:text="SignUp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.683" />
-
-    <TextView
-        android:id="@+id/signupError"
-        android:layout_width="255dp"
-        android:layout_height="32dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.461"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.091" />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
